Fix IE flex overflow bug

--- a/shared/components/column/_column.scss
+++ b/shared/components/column/_column.scss
@@ -3,7 +3,8 @@
     flex-direction: column;
 
     .o-grid-row {
-        flex: 1;
+			flex: 1;
+			-ms-flex-preferred-size: auto;
     }
 
     &[data-o-grid-colspan~="hide"] {
